(SERVER-1162) Bring back jruby-utils project file, readmes